--- a/edge-of-the-world.html
+++ b/edge-of-the-world.html
@@ -468,9 +468,8 @@ Within a year, the cooling technology we were developing took a profitable turn 
 
 </div><!-- /audioscape -->
 
-<ul class="footer">
-    <li><a href="./">&copy; 2021 Audioscape</a></li>
-</ul>
+<br>
+<a href="./">&copy; 2021 Audioscape</a><br><br>
 
 </div>
 </div>
