--- a/gathering-cats/aurora/index.html
+++ b/gathering-cats/aurora/index.html
@@ -153,19 +153,19 @@
 	One of the sad and confusing moments faced as a student preparing for my sophomore year, was the call I received from Aurora, whom I'd been dating at the end of my freshman year.  We'd both gone north for the summer, she to Sutton Valley to her parent's house and me to Coloma, Michigan to visit my Dad and Stepmum. Returning to my mom's in Upland, California, I'd be back in Santa Barbara in a couple weeks when my lease started at the Newman housing co-op on the edge of campus.
 </p>
 <p>
-	I picked up the phone to hear a tearful Aurora.  "Mike told me you were planning to break up. I got drunk. Stanly had sex with me. I don't know what to do."  What a flood of emotions, being mad at Mike, pissed at Stanly, but mostly this tremendous need to console Aurora. What a fucked start for the new school year.
+	I picked up the phone to hear a tearful Aurora.  "Mike told me you were planning to break up. I got drunk. Stanly forced himself on me. He wasn't wearing a condom. I don't know what to do."  What a flood of emotions, being mad at Mike, pissed at Stanly, this tremendous need to console Aurora. What a fucked start for the new school year.
 </p>
 <p>
-	We talked a little more and I put down the phone, stunned and unsure what to do. It felt like Aurora wanted me to make the drive to Santa Barabara, but I didn't have a car of my own, nor did it seem like a good idea if the relationship was winding down. We were also both scared. HIV/AIDS was in it's heyday, Stanly was likely also having sex with men and the whole fact the my freshmen roommate Mike had relayed what I'd told him in confidence made me reel. 
+	We talked a little more and I put down the phone, stunned and unsure. It felt like Aurora wanted me to make the drive to Santa Barabara, but I didn't have a car of my own, nor did it seem like a good idea if the relationship was winding down. We were also both scared. HIV/AIDS was in it's heyday, Stanly was likely also having sex with men and the whole fact the my freshmen roommate Mike had relayed what I'd told him in confidence made me reel. 
 </p>
 <p>
-	The next couple weeks passed in crapsville limbo. I arrived at the co-op for the start of Sophomore year, my bike and others left there over the summer had been sold by the co-op director to make way for painting in the common porch area. Aurora had dinner at my place as friends. To say the least, the year started with a tone of melancholia.
+	The next couple weeks passed in crapsville limbo. I arrived at the co-op for the start of Sophomore year, my bike (left there over the summer) had been sold by the co-op director to make way for painting in the common porch area. Aurora had dinner at my place as friends. To say the least, the year started with a tone of melancholia.
 </p>
 <p>
 	I changed her name to Aurora above, but the rest is true. Our paths didn't cross much that year, I think she may have ended up moving back to Sutton Creek before the end of the school year.  It was good to see her a couple years later. She'd had a really positive relationship living with a guy for over a year. Now she was returning to Santa Barbara. I had a car by then and she asked if I'd help her pick up a mattress.
 </p>
 <p>
-	I was dating Meilani at the time, so I invited her to join us and we visted common friends Alan and Sabina in downtown Santa Barbara during the outing. Sitting on their beds eating grapes that Alan brought us was a moment of bliss, then I started to feel ill from some bad sour cream on the chille I'd eaten before we arrived at Alan's.  Outside, I was throwing up and ended up in bed with stomach pains. I loved that Meilani stayed by my side when I was ill. I felt like we had something really special. We did.
+	I was dating Meilani at the time, so I invited her to join us and we visted our friends Alan and Sabina in downtown Santa Barbara during the outing. Sitting on their beds eating grapes that Alan brought us was a moment of bliss, then I started to feel ill from some bad sour cream on the chille I'd eaten before we arrived at Alan's.  Outside, I was throwing up and ended up in bed with stomach pains. I loved that Meilani stayed by my side when I was feeling my worse. I felt like we had something really special. We did.
 </p>
 <p>
 	Part of the reason I'm retelling this is because it later became a short film created by Meilani and Justin for a film class. The story of a guy driving around with his ex-girlfriend and new girlfriend. Our friend Bob played me as sort of a 70's high roller, and in some ways I deserved it, but that has more to do with the end of my relationship with Meilani shortly before the film was made. More on that later.
