--- a/gathering-cats/border-crossing/index.html
+++ b/gathering-cats/border-crossing/index.html
@@ -199,12 +199,23 @@ hopefully lead him to one the world's foremost mathematicians, Oseph Easthay. A 
 -->
 
 
-<p style="display:none;" class="local"><a href="../../cat-star/">Winter on an Island</a></p>
-
-<p style="display:none;" class="local"><a href="../../winter/challenge/">The Cast - Winter Challenge - Michael tussles with David</a></p>
 
 
-<p><a href="../../">Return Home - Tune in again soon for Cat Star</a></p>
+
+<p><a href="../../">Return Home - Tune in again soon for Antikythera, Travel School, Cat Star</a></p>
+
+<p style="display:none;" class="local">
+
+  <a href="../../application/">Travel School</a><br>
+
+  <a href="../../cat-star/">Winter on an Island</a><br>
+
+  <a href="../../sun/on-the-run/">On the Run</a><br>
+  
+  <a href="../../winter/challenge/">The Cast - Winter Challenge - Michael tussles with David</a>
+
+</p>
+
 
 <br><a href="../../">&copy; 2021 Audioscape</a><br><br>
 
