--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
             <!--
             Love this device, the Antikythera Mechanism (created 205 BC) discovered by sponge divers in 1901 near the island of Antikythera. Amazing that the ancient Greeks could use it to predict eclipses and the 462-year planetary relation between Earth and Venus using a 62-tooth gear. Venus orbits the sun in 225 earth days.
 
+            "You may think I'm insulting him because he was a professor at Yale, but he was English so I'm allowed to do it."
+
             https://www.ucl.ac.uk/news/2021/mar/experts-recreate-mechanical-cosmos-worlds-first-computer
             https://madsystems.com/portfolio-item/antikythera/
             https://spacecentre.co.uk/blog-post/the-antikythera-mechanism-2000-years-on/
